<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="20dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:orientation="vertical" >   

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
                
         <TextView
        android:id="@+id/Latitude1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_latitude"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#CC00FF"
        android:textSize="25sp"
        android:padding="10dp" />
         
        <TextView
        android:id="@+id/Latitude2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_latitude"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#30D00B"
        android:textSize="25sp"
        android:padding="10dp"/>        
        
    </LinearLayout>

     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

	    <TextView
	        android:id="@+id/Longitude1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	         android:text="@string/lbl_longitude"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:textColor="#CC00FF"
	        android:textSize="25sp"
	        android:padding="10dp" />
	
	  <TextView
	        android:id="@+id/Longitude2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/txt_longitude"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:textColor="#30D00B"
	        android:textSize="25sp"
	        android:padding="10dp"/>  
    
    </LinearLayout>
    
 <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
	    <TextView
	        android:id="@+id/Time1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	         android:text="@string/lbl_time"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:textColor="#CC00FF"
	        android:textSize="25sp" 
	        android:padding="10dp"/>

    <TextView
	        android:id="@+id/Time2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/txt_time"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:textColor="#30D00B"
	        android:textSize="25sp"
	        android:padding="10dp"/>
    
    </LinearLayout>

</LinearLayout>